--- a/0x05-Node_JS_basic/package.json
+++ b/0x05-Node_JS_basic/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "lint": "./node_modules/.bin/eslint",
     "check-lint": "lint [0-9]*.js",
-    "test": "./node_modules/mocha/bin/mocha --require babel-register --exit",
-    "dev": "nodemon --exec babel-node --presets babel-preset-env ./server.js ./database.csv"
+    "test": "./node_modules/mocha/bin/mocha --require babel-register --exit '*.js'",
+    "dev": "nodemon --exec babel-node --presets babel-preset-env ./server.js ./database.csv",
+    "full-test": "./node_modules/mocha/bin/mocha --require babel-register --exit"
   },
   "author": "",
   "license": "ISC",
